// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > response > getLatestReviewResponse > audit > expected call 1`] = `
[
  {
    "_id": "6646f5953391b094ca4f55ee",
    "createdAt": "2024-05-17T06:13:41.690Z",
    "entity": "user",
    "message": "test comment",
  },
]
`;

exports[`routes > response > getLatestReviewResponse > successfully fetches the latest response for a review 1`] = `
{
  "response": {
    "_id": "6646f5953391b094ca4f55ee",
    "createdAt": "2024-05-17T06:13:41.690Z",
    "entity": "user",
    "message": "test comment",
  },
}
`;
